--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "java"
+    id "io.freefair.lombok" version "5.2.1"
 }
 
 group = "com.github.bncrypted.bapidor"
@@ -12,4 +13,11 @@ repositories {
 
 dependencies {
     implementation "net.portswigger.burp.extender:burp-extender-api:2.1"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
+}
+
+test {
+    useJUnitPlatform()
 }
