--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "io.freefair.lombok" version "5.2.1"
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group = "com.github.bncrypted.bapidor"
@@ -13,6 +14,7 @@ repositories {
 
 dependencies {
     implementation "net.portswigger.burp.extender:burp-extender-api:2.1"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.11.3"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
